src/z80asm/z80asm2/t/40-syntax/expected/opcodes_01_kc160.txt
% z88dk-z80asm -v -mkc160 -dump-after-parse t/40-syntax//input/opcodes_01.asm
Define constant: __CPU_KC160__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/opcodes_01.asm...
t/40-syntax/input/opcodes_01.asm:6:1: error: Unrecognized instruction or directive
    altd ioe bit 0, (ix)    ; long opcode, but valid in some CPUs
    ^
t/40-syntax/input/opcodes_01.asm:8:1: error: Unrecognized instruction or directive
    dwjnz label             ; invalid opcode in some CPUs, but valid in others
    ^
t/40-syntax/input/opcodes_01.asm:9:9: error: Unrecognized instruction or directive
    out (bc), 0             ; Is_0, None
            ^
t/40-syntax/input/opcodes_01.asm:13:4: error: Unrecognized instruction or directive
    rl 4, bcde              ; Is_1_2_4, AddScaled
       ^
t/40-syntax/input/opcodes_01.asm:14:5: error: Unrecognized instruction or directive
    rlc 8, bcde             ; Is_1_2_4_8, AddScaled
        ^
t/40-syntax/input/opcodes_01.asm:15:6: error: Unrecognized instruction or directive
    rst v, $40              ; Is_40, None
         ^
t/40-syntax/input/opcodes_01.asm:16:5: error: Unrecognized instruction or directive
    rla 8, bcde             ; Is_8, None
        ^
t/40-syntax/input/opcodes_01.asm:17:5: error: Unrecognized instruction or directive
    rlc 1, bcde             ; Is_1_2_4_8, SelectOrAdd
        ^
t/40-syntax/input/opcodes_01.asm:23:1: error: Unrecognized instruction or directive
    ldh (0x01), a           ; HighByte
    ^
t/40-syntax/input/opcodes_01.asm:24:1: error: Unrecognized instruction or directive
    ldh (0xFF01), a         ; HighByte
    ^
t/40-syntax/input/opcodes_01.asm:25:6: error: Unrecognized instruction or directive
    push 0x1234             ; BigEndian
         ^
t/40-syntax/input/opcodes_01.asm:28:1: error: Unrecognized instruction or directive
    jre label               ; PCrelative
    ^
t/40-syntax/input/opcodes_01.asm:44:8: error: Unterminated expression after "+"
    ld a, 1+                ; error in expression
           ^
Program
    LabelStmt
        Location: t/40-syntax/input/opcodes_01.asm:1:1
        Label: label
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:1:1
        Address: 0
        Bytes: 0
    LabelStmt
        Location: t/40-syntax/input/opcodes_01.asm:2:1
        Label: label
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:2:1
        Address: 0
        Bytes: 0
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:3:1
        Address: 0
        Bytes: 0
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:4:1
        Address: 0
        Bytes: $78
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:5:1
        Address: 0
        Bytes: $3E 0
        Patches:
            Patch
                Location: t/40-syntax/input/opcodes_01.asm:5:1
                Value type: Unknown
                Tokens: 
                Offset: 1, Size: 1
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprBinary: +
                        Location: t/40-syntax/input/opcodes_01.asm:5:9
                        Value type: Unknown
                        Tokens: b+1
                        LHS:
                            ExprSymbol: b
                                Location: t/40-syntax/input/opcodes_01.asm:5:7
                                Value type: Unknown
                                Tokens: 
                        RHS:
                            ExprLiteralInt: 1
                                Location: t/40-syntax/input/opcodes_01.asm:5:9
                                Value type: Unknown
                                Tokens: 
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:7:1
        Address: 0
        Bytes: $ED $B0
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:10:1
        Address: 0
        Bytes: $ED 0
        Patches:
            Patch
                Location: t/40-syntax/input/opcodes_01.asm:10:1
                Value type: Unknown
                Tokens: 
                Offset: 1, Size: 1
                Constant patch
                Type: Unsigned
                Validation: 0,1,2,3
                Formula: Select3
                Coefficients: 0, $46, 1, $56, 2, $5E, $4E
                Inner expression:
                    ExprLiteralInt: 1
                        Location: t/40-syntax/input/opcodes_01.asm:10:4
                        Value type: Unknown
                        Tokens: 1
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:11:1
        Address: 0
        Bytes: $CB 0
        Patches:
            Patch
                Location: t/40-syntax/input/opcodes_01.asm:11:1
                Value type: Unknown
                Tokens: 
                Offset: 1, Size: 1
                Constant patch
                Type: Unsigned
                Validation: 0-7
                Formula: AddScaled
                Coefficients: $47, 8
                Inner expression:
                    ExprLiteralInt: 0
                        Location: t/40-syntax/input/opcodes_01.asm:11:5
                        Value type: Unknown
                        Tokens: 0
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:12:1
        Address: 0
        Bytes: 0
        Patches:
            Patch
                Location: t/40-syntax/input/opcodes_01.asm:12:1
                Value type: Unknown
                Tokens: 
                Offset: 0, Size: 1
                Constant patch
                Type: Unsigned
                Validation: 1-7,0,8,10,18,20,28,30,38
                Formula: ScaleBelowThreshold
                Coefficients: $C7
                Inner expression:
                    ExprLiteralInt: $20
                        Location: t/40-syntax/input/opcodes_01.asm:12:5
                        Value type: Unknown
                        Tokens: $20
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:18:1
        Address: 0
        Bytes: $3E 0
        Patches:
            Patch
                Location: t/40-syntax/input/opcodes_01.asm:18:1
                Value type: Unknown
                Tokens: 
                Offset: 1, Size: 1
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprBinary: +
                        Location: t/40-syntax/input/opcodes_01.asm:18:9
                        Value type: Unknown
                        Tokens: 1+2*3
                        LHS:
                            ExprLiteralInt: 1
                                Location: t/40-syntax/input/opcodes_01.asm:18:7
                                Value type: Unknown
                                Tokens: 
                        RHS:
                            ExprBinary: *
                                Location: t/40-syntax/input/opcodes_01.asm:18:11
                                Value type: Unknown
                                Tokens: 
                                LHS:
                                    ExprLiteralInt: 2
                                        Location: t/40-syntax/input/opcodes_01.asm:18:9
                                        Value type: Unknown
                                        Tokens: 
                                RHS:
                                    ExprLiteralInt: 3
                                        Location: t/40-syntax/input/opcodes_01.asm:18:11
                                        Value type: Unknown
                                        Tokens: 
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:19:1
        Address: 0
        Bytes: $3A 0 0
        Patches:
            Patch
                Location: t/40-syntax/input/opcodes_01.asm:19:1
                Value type: Unknown
                Tokens: 
                Offset: 1, Size: 2
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprBinary: +
                        Location: t/40-syntax/input/opcodes_01.asm:19:10
                        Value type: Unknown
                        Tokens: 1+2*3
                        LHS:
                            ExprLiteralInt: 1
                                Location: t/40-syntax/input/opcodes_01.asm:19:8
                                Value type: Unknown
                                Tokens: 
                        RHS:
                            ExprBinary: *
                                Location: t/40-syntax/input/opcodes_01.asm:19:12
                                Value type: Unknown
                                Tokens: 
                                LHS:
                                    ExprLiteralInt: 2
                                        Location: t/40-syntax/input/opcodes_01.asm:19:10
                                        Value type: Unknown
                                        Tokens: 
                                RHS:
                                    ExprLiteralInt: 3
                                        Location: t/40-syntax/input/opcodes_01.asm:19:12
                                        Value type: Unknown
                                        Tokens: 
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:20:1
        Address: 0
        Bytes: $DD $7E 0
        Patches:
            Patch
                Location: t/40-syntax/input/opcodes_01.asm:20:1
                Value type: Unknown
                Tokens: 
                Offset: 2, Size: 1
                Type: Signed
                Validation: Any
                Formula: None
                Inner expression:
                    ExprBinary: +
                        Location: t/40-syntax/input/opcodes_01.asm:20:13
                        Value type: Unknown
                        Tokens: +1+2*3
                        LHS:
                            ExprUnary: +
                                Location: t/40-syntax/input/opcodes_01.asm:20:10
                                Value type: Unknown
                                Tokens: 
                                RHS:
                                    ExprLiteralInt: 1
                                        Location: t/40-syntax/input/opcodes_01.asm:20:11
                                        Value type: Unknown
                                        Tokens: 
                        RHS:
                            ExprBinary: *
                                Location: t/40-syntax/input/opcodes_01.asm:20:15
                                Value type: Unknown
                                Tokens: 
                                LHS:
                                    ExprLiteralInt: 2
                                        Location: t/40-syntax/input/opcodes_01.asm:20:13
                                        Value type: Unknown
                                        Tokens: 
                                RHS:
                                    ExprLiteralInt: 3
                                        Location: t/40-syntax/input/opcodes_01.asm:20:15
                                        Value type: Unknown
                                        Tokens: 
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:21:1
        Address: 0
        Bytes: $7E
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:22:1
        Address: 0
        Bytes: $0A
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:26:1
        Address: 0
        Is short jump
        Bytes: $18 0
        Patches:
            Patch
                Location: t/40-syntax/input/opcodes_01.asm:26:1
                Value type: Unknown
                Tokens: 
                Offset: 1, Size: 1
                Type: PCrelative
                Validation: Any
                Formula: None
                Short jump (alt offset: 1, alt size: 2)
                Alt bytes: $C3 0 0
                Inner expression:
                    ExprSymbol: label
                        Location: t/40-syntax/input/opcodes_01.asm:26:4
                        Value type: Unknown
                        Tokens: label
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:27:1
        Address: 0
        Is short jump
        Bytes: $30 0
        Patches:
            Patch
                Location: t/40-syntax/input/opcodes_01.asm:27:1
                Value type: Unknown
                Tokens: 
                Offset: 1, Size: 1
                Type: PCrelative
                Validation: Any
                Formula: None
                Short jump (alt offset: 1, alt size: 2)
                Alt bytes: $D2 0 0
                Inner expression:
                    ExprSymbol: label
                        Location: t/40-syntax/input/opcodes_01.asm:27:8
                        Value type: Unknown
                        Tokens: label
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:29:1
        Address: 0
        Bytes: $ED $85 0
        Patches:
            Patch
                Location: t/40-syntax/input/opcodes_01.asm:29:1
                Value type: Unknown
                Tokens: 
                Offset: 2, Size: 1
                Type: Signed
                Validation: Any
                Formula: None
                Inner expression:
                    ExprBinary: +
                        Location: t/40-syntax/input/opcodes_01.asm:29:10
                        Value type: Unknown
                        Tokens: +1+2*3
                        LHS:
                            ExprUnary: +
                                Location: t/40-syntax/input/opcodes_01.asm:29:7
                                Value type: Unknown
                                Tokens: 
                                RHS:
                                    ExprLiteralInt: 1
                                        Location: t/40-syntax/input/opcodes_01.asm:29:8
                                        Value type: Unknown
                                        Tokens: 
                        RHS:
                            ExprBinary: *
                                Location: t/40-syntax/input/opcodes_01.asm:29:12
                                Value type: Unknown
                                Tokens: 
                                LHS:
                                    ExprLiteralInt: 2
                                        Location: t/40-syntax/input/opcodes_01.asm:29:10
                                        Value type: Unknown
                                        Tokens: 
                                RHS:
                                    ExprLiteralInt: 3
                                        Location: t/40-syntax/input/opcodes_01.asm:29:12
                                        Value type: Unknown
                                        Tokens: 
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:30:1
        Address: 0
        Bytes: $EB
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:30:1
        Address: 0
        Bytes: $21 0 0
        Patches:
            Patch
                Location: t/40-syntax/input/opcodes_01.asm:30:1
                Value type: Unknown
                Tokens: 
                Offset: 1, Size: 2
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprCallUnary: UNSIGNED8
                        Location: t/40-syntax/input/opcodes_01.asm:30:6
                        Value type: Unknown
                        Tokens: unsigned8(+1+2*3)
                        Arg:
                            ExprBinary: +
                                Location: t/40-syntax/input/opcodes_01.asm:30:13
                                Value type: Unknown
                                Tokens: 
                                LHS:
                                    ExprUnary: +
                                        Location: t/40-syntax/input/opcodes_01.asm:30:10
                                        Value type: Unknown
                                        Tokens: 
                                        RHS:
                                            ExprLiteralInt: 1
                                                Location: t/40-syntax/input/opcodes_01.asm:30:11
                                                Value type: Unknown
                                                Tokens: 
                                RHS:
                                    ExprBinary: *
                                        Location: t/40-syntax/input/opcodes_01.asm:30:15
                                        Value type: Unknown
                                        Tokens: 
                                        LHS:
                                            ExprLiteralInt: 2
                                                Location: t/40-syntax/input/opcodes_01.asm:30:13
                                                Value type: Unknown
                                                Tokens: 
                                        RHS:
                                            ExprLiteralInt: 3
                                                Location: t/40-syntax/input/opcodes_01.asm:30:15
                                                Value type: Unknown
                                                Tokens: 
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:30:1
        Address: 0
        Bytes: $39
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:30:1
        Address: 0
        Bytes: $EB
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:31:1
        Address: 0
        Bytes: $7E
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:32:1
        Address: 0
        Bytes: $DD $7E 0
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:33:1
        Address: 0
        Bytes: $3A 0 0
        Patches:
            Patch
                Location: t/40-syntax/input/opcodes_01.asm:33:1
                Value type: Unknown
                Tokens: 
                Offset: 1, Size: 2
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprBinary: +
                        Location: t/40-syntax/input/opcodes_01.asm:33:10
                        Value type: Unknown
                        Tokens: b+c
                        LHS:
                            ExprSymbol: b
                                Location: t/40-syntax/input/opcodes_01.asm:33:8
                                Value type: Unknown
                                Tokens: 
                        RHS:
                            ExprSymbol: c
                                Location: t/40-syntax/input/opcodes_01.asm:33:10
                                Value type: Unknown
                                Tokens: 
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:34:1
        Address: 0
        Bytes: $3E 0
        Patches:
            Patch
                Location: t/40-syntax/input/opcodes_01.asm:34:1
                Value type: Unknown
                Tokens: 
                Offset: 1, Size: 1
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprUnary: -
                        Location: t/40-syntax/input/opcodes_01.asm:34:7
                        Value type: Unknown
                        Tokens: -1
                        RHS:
                            ExprLiteralInt: 1
                                Location: t/40-syntax/input/opcodes_01.asm:34:8
                                Value type: Unknown
                                Tokens: 
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:35:1
        Address: 0
        Bytes: $3E 0
        Patches:
            Patch
                Location: t/40-syntax/input/opcodes_01.asm:35:1
                Value type: Unknown
                Tokens: 
                Offset: 1, Size: 1
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprUnary: ~
                        Location: t/40-syntax/input/opcodes_01.asm:35:7
                        Value type: Unknown
                        Tokens: ~1
                        RHS:
                            ExprLiteralInt: 1
                                Location: t/40-syntax/input/opcodes_01.asm:35:8
                                Value type: Unknown
                                Tokens: 
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:36:1
        Address: 0
        Bytes: $DD $7E 0
        Patches:
            Patch
                Location: t/40-syntax/input/opcodes_01.asm:36:1
                Value type: Unknown
                Tokens: 
                Offset: 2, Size: 1
                Type: Signed
                Validation: Any
                Formula: None
                Inner expression:
                    ExprUnary: -
                        Location: t/40-syntax/input/opcodes_01.asm:36:10
                        Value type: Unknown
                        Tokens: -3
                        RHS:
                            ExprLiteralInt: 3
                                Location: t/40-syntax/input/opcodes_01.asm:36:11
                                Value type: Unknown
                                Tokens: 
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:37:1
        Address: 0
        Bytes: $FD $7E 0
        Patches:
            Patch
                Location: t/40-syntax/input/opcodes_01.asm:37:1
                Value type: Unknown
                Tokens: 
                Offset: 2, Size: 1
                Type: Signed
                Validation: Any
                Formula: None
                Inner expression:
                    ExprUnary: +
                        Location: t/40-syntax/input/opcodes_01.asm:37:10
                        Value type: Unknown
                        Tokens: +(-2)
                        RHS:
                            ExprUnary: -
                                Location: t/40-syntax/input/opcodes_01.asm:37:12
                                Value type: Unknown
                                Tokens: 
                                RHS:
                                    ExprLiteralInt: 2
                                        Location: t/40-syntax/input/opcodes_01.asm:37:13
                                        Value type: Unknown
                                        Tokens: 
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:38:1
        Address: 0
        Bytes: $E9
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:39:1
        Address: 0
        Bytes: $DD $E9
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:40:1
        Address: 0
        Bytes: $C3 0 0
        Patches:
            Patch
                Location: t/40-syntax/input/opcodes_01.asm:40:1
                Value type: Unknown
                Tokens: 
                Offset: 1, Size: 2
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprLiteralInt: $4D2
                        Location: t/40-syntax/input/opcodes_01.asm:40:5
                        Value type: Unknown
                        Tokens: ($4D2)
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:41:1
        Address: 0
        Bytes: $C9
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:42:1
        Address: 0
        Bytes: $C0
    OpcodeStmt
        Location: t/40-syntax/input/opcodes_01.asm:43:1
        Address: 0
        Bytes: $3E 0
        Patches:
            Patch
                Location: t/40-syntax/input/opcodes_01.asm:43:1
                Value type: Unknown
                Tokens: 
                Offset: 1, Size: 1
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprLiteralInt: $1234
                        Location: t/40-syntax/input/opcodes_01.asm:43:7
                        Value type: Unknown
                        Tokens: $1234
